# voicenode

./: .agents  .gitignore  AGENTS.md  CONTEXT.md  README.md  config.json  pyproject.toml
docs/adr/: 0001-hexagonal-architecture.md
src/voicenode/: cli.py  logging_config.py
src/voicenode/adapters/: __init__.py  device_menu.py  faster_whisper_adapter.py  http_transcriber_adapter.py  json_config_adapter.py  webrtcvad_adapter.py  websockets_adapter.py  whisper_cpp_adapter.py
src/voicenode/audio/: __init__.py  aec_engine.py
src/voicenode/core/: __init__.py  protocol_handler.py  stop_word_detector.py  stop_word_matcher.py
src/voicenode/ports/: __init__.py
tests/: test_aec_engine.py  test_app.py  test_async_loop.py  test_audio_capture.py  test_cli.py  test_cli_device_menu.py  test_cli_override.py  test_config.py  test_config_update.py  test_device_identity.py  test_device_menu.py  test_device_registry.py  test_http_transcriber_adapter.py  test_log.py  test_missing_device_prompt.py  test_monitor.py  test_protocol_aec_routing.py  test_server_config.py  test_stop_word_detection.py  test_stop_word_detector.py  test_stop_word_detector_timeout.py  test_stop_word_integration.py  test_transcription.py  test_tts.py  test_tts_stream_routing.py  test_websocket.py
